# cold-clear-web

./: Cargo.toml  build.sh  index.css  main.d.ts  main.js  main_bg.d.ts  main_bg.wasm  package.json  worker.js
src/: audio_ended_event.rs  gui.rs  input.rs  lib.rs  options.rs  player_ui.rs  resources.rs  utils.rs
static/: index.css  index.html  worker.js
